# flashimg

./: .gitignore  AUTHORS  LICENSE  Makefile  Makefile.am  README  README.md  autocp.sh  autogen.sh  configure.ac  main.c  nand_ecc.c  uboot.part
